--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             <p>En Market Digital ponemos a tu disposición una gran variedad de servicios para lograr que tus ventas por internet sean efectivas. Nuestra misión es que tu marca se posicione en la web y obtenga un tráfico de visitas con potenciales clientes.</p>
         </section>
     </div>
+
+    <div class="container-servicios">
+        <div class="servicios">
+            <h2>¿QUIERES UNA PÁGINA WEB PARA TU NEGOCIO?</h2>
+            <p>Da clic aquí y accede a nuestras promociones</p>
+            <button>VER PROMOCIONES</button>
+        </div>
+    </div>
 </body>
 
 </html>
